(feat) Solve icons cropping footer text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -336,11 +336,16 @@ footer {
   margin: 1em 0.5em;
   border-radius: 20px;
 }
+.meta {
+  width: 100%;
+}
 
 .meta a {
   margin: 0.5em;
   text-decoration: none;
   color: var(--color-grey);
+  text-align: center;
+  max-width: 40%;
 }
 
 .code-div {
@@ -375,6 +380,10 @@ footer {
     height: 30px;
     margin: 1em 0.2em;
     border-radius: 15px;
+  }
+
+  .meta {
+    font-size: 75%;
   }
 
   #github-code {
